--- a/换料说明.md
+++ b/换料说明.md
@@ -1,18 +1,24 @@
-﻿*机器正面左下角的显示屏如下操作界面。&nbsp;
-![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/1.png)
+**机器正面左下角的显示屏如下操作界面。** <br>
 
-*操作拨轮开关，选择 “换料＆调平”——“换料＆测试”&nbsp;
-![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/2.png)
+![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/1.png) <br>
 
-*此时挤出机会自动从初始位置移动到平台中央，并开始加热挤出机1—2分钟左右（ 如图），等待喷头温度达到200℃后（ 按钮变成红底白字状态），点击“继续”&nbsp;
-![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/3.png)
+**操作拨轮开关，选择 “换料＆调平”——“换料＆测试”**  <br>
 
-*参考屏幕提示内容，检查挤出机进料口有无残余丝材，如果有，按照屏幕中的指示，一手向下按住摇臂，一手向上拔出耗材，直到拔除残余丝材。&nbsp;
-![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/4.png)
+![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/2.png) <br>
 
-*将耗材线头分别穿过通明进料管、导料卡子，随后通过挤出机进料口，进入挤出机，（如图）一手向下按住摇臂，一手向进料口垂直插入新的耗材，直至松开摇臂后材料被压住，随后将进料管穿过导料卡子，插入挤出机进料口固定。注意：插入耗材之前检查是否已经安装好料管与料管支撑件。&nbsp;
-![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/5.png)
-![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/6.png)
+**此时挤出机会自动从初始位置移动到平台中央，并开始加热挤出机1—2分钟左右（ 如图），等待喷头温度达到200℃后（ 按钮变成红底白字状态），点击“继续”** <br> 
 
-*点击“测试”，直至观察到耗材从喷嘴中被挤出，点击“结束”。&nbsp;
+![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/3.png) <br>
+
+**参考屏幕提示内容，检查挤出机进料口有无残余丝材，如果有，按照屏幕中的指示，一手向下按住摇臂，一手向上拔出耗材，直到拔除残余丝材。**<br>
+
+![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/4.png) <br>
+
+**将耗材线头分别穿过通明进料管、导料卡子，随后通过挤出机进料口，进入挤出机，（如图）一手向下按住摇臂，一手向进料口垂直插入新的耗材，直至松开摇臂后材料被压住，随后将进料管穿过导料卡子，插入挤出机进料口固定。注意：插入耗材之前检查是否已经安装好料管与料管支撑件。**<br>
+
+![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/5.png) <br>
+![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/6.png) <br>
+
+**点击“测试”，直至观察到耗材从喷嘴中被挤出，点击“结束”。**<br>
+
 ![](https://github.com/swjtu-maker/action-school/blob/master/materials-changing/7.png)
