--- a/原型制造工坊——3D打印使用说明.md
+++ b/原型制造工坊——3D打印使用说明.md
@@ -1,5 +1,9 @@
-<h2>原型制造工坊——3D打印使用说明</h2><br>
-<h3>[C4M软件使用说明](https://github.com/swjtu-maker/action-school/blob/master/C4M%E8%BD%AF%E4%BB%B6%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E.md)</h3><br>
-<h3>[Mostfun Pro 3D打印机使用方法（简版）](https://github.com/swjtu-maker/action-school/blob/master/Mostfun%20Pro%203D%E6%89%93%E5%8D%B0%E6%9C%BA%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95%EF%BC%88%E7%AE%80%E7%89%88%EF%BC%89.md)</h3><br>
-<h3>[Mostfun Pro 3D打印机使用方法（详细）](https://github.com/swjtu-maker/action-school/blob/master/mostfun-Pro%20%203D%E6%89%93%E5%8D%B0%E6%9C%BA%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95%EF%BC%88%E8%AF%A6%E7%BB%86%EF%BC%89.md)</h3><br>
-<h3>[换料说明](https://github.com/swjtu-maker/action-school/blob/master/%E6%8D%A2%E6%96%99%E8%AF%B4%E6%98%8E.md)</h3><br>
+<h2>原型制造工坊——3D打印使用说明</h2>
+
+<br><h3> [C4M软件使用说明](https://github.com/swjtu-maker/action-school/blob/master/C4M%E8%BD%AF%E4%BB%B6%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E.md) </h3>
+
+<br><h3> [Mostfun Pro 3D打印机使用方法（简版）](https://github.com/swjtu-maker/action-school/blob/master/Mostfun%20Pro%203D%E6%89%93%E5%8D%B0%E6%9C%BA%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95%EF%BC%88%E7%AE%80%E7%89%88%EF%BC%89.md) </h3>
+
+<br><h3> [Mostfun Pro 3D打印机使用方法（详细）](https://github.com/swjtu-maker/action-school/blob/master/mostfun-Pro%20%203D%E6%89%93%E5%8D%B0%E6%9C%BA%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95%EF%BC%88%E8%AF%A6%E7%BB%86%EF%BC%89.md)</h3>
+
+<br><h3>[换料说明](https://github.com/swjtu-maker/action-school/blob/master/%E6%8D%A2%E6%96%99%E8%AF%B4%E6%98%8E.md)</h3><br>
